@@ -12,7 +12,7 @@ Homepage: http://wajig.togaware.com
 Package: wajig
 Architecture: all
 Depends: ${misc:Depends},
-         python3 (>= 3.2),
+         python3 (>= 3.3),
          apt,
          python3-apt,
          aptitude,
